ITS WORKING HAHAHAHAHA

--- a/client/src/styles/Reviews.css
+++ b/client/src/styles/Reviews.css
@@ -1,3 +1,8 @@
-.reviewDiv {
-    border: 2px solid green;
+.reviewDivPage {
+    border: 2px solid #c10206;
+    text-align: center;
+}
+
+.authorText {
+    color: black;
 }
