--- a/client/src/styles/Homepage.css
+++ b/client/src/styles/Homepage.css
@@ -132,10 +132,11 @@
       background-color: black;
       border: 2px solid #c10206;
       font-size: 10px;
+      margin-top: 22vh;
     }
 
     .welcome-head {
-      margin-top: 15vh;
+      margin-top: 20vh;
     }
 
     .make-big {
@@ -146,13 +147,13 @@
       background-color: black;
     }
 
-    .theMessage {
+    /* .theMessage {
       position: absolute;
       top: 40%;
-      /* padding: 10px; */
-    }
+ 
+    } */
   }
-
+ 
   @media (max-width: 435px) {
     .thePic {
       display: none;
@@ -164,13 +165,15 @@
       background-color: black;
       border: 2px solid #c10206;
       font-size: 10px;
-      margin-top: 0;
+      margin-top: 10vh;
+      margin-bottom: 15vh;
     }
 
     .homepageText {
       background-color: black;
       border: 2px solid #c10206;
       font-size: 10px;
+      margin-top: 30vh;
     }
 
     .welcome-head {
@@ -183,11 +186,49 @@
 
     .loginA {
       background-color: black;
+      margin-top: 10vh;
     }
 
-    .theMessage {
+    /* .theMessage {
       position: absolute;
       top: 50%;
-      /* padding: 10px; */
+    } */
+  }
+
+  @media (max-width: 355px) {
+    .thePic {
+      display: none;
     }
+
+    .h2Text {
+      /* margin-bottom: 10px; */
+      color: white;
+      background-color: black;
+      border: 2px solid #c10206;
+      font-size: 10px;
+      margin-top: 10vh;
+      margin-bottom: 15vh;
+    }
+
+    .homepageText {
+      background-color: black;
+      border: 2px solid #c10206;
+      font-size: 10px;
+      margin-top: 36vh;
+    }
+
+    .welcome-head {
+      margin-top: 35vh;
+    }
+
+    .make-big {
+      background-color: rgba(33, 32, 32, 0.992);
+    }
+
+    .loginA {
+      background-color: black;
+      margin-top: 10vh;
+    }
+
+
   }
